--- a/css/style.css
+++ b/css/style.css
@@ -20,7 +20,10 @@
   border: 1px solid rgba(0, 0, 0, 0.15);
   position: relative;
 }
-
+.wrap:hover
+{
+  border: 1px solid red;
+}
 .wrap .lbl {
   position: absolute;
   top: 10%;
