--- a/css/medicalschedule.css
+++ b/css/medicalschedule.css
@@ -7,3 +7,25 @@
     display: flex;
     box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.15);
   }
+  .table {
+  width: 100%;
+  margin-bottom: 1rem;
+  background-color: transparent;
+  border: 1px solid rgba(0, 0, 0, 0.15);
+  border-collapse: collapse;
+  font-size: 20px;
+}
+
+.table th,
+.table td {
+  padding: 0.75rem;
+  vertical-align: top;
+  border: 1px solid rgba(0, 0, 0, 0.15);
+}
+
+.table thead th {
+  vertical-align: bottom;
+  background-color: rgba(0, 0, 0, 0.15);
+  text-align: left;
+  color: rgba(0, 0, 0, 0.5);
+}
