--- a/AppTV/css/introduce.css
+++ b/AppTV/css/introduce.css
@@ -1,9 +1,15 @@
-.div2{
-    margin: 0 auto;
-    width: 100%;
-    height: 80px;
-    font-size: 20px;
-    font-weight: 500;
-    display: flex;
-    box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.15);
-  }
+.div2 {
+  margin: 0 auto;
+  width: 100%;
+  height: 80px;
+  font-size: 20px;
+  font-weight: 500;
+  display: flex;
+  box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.15);
+}
+.container p {
+  font-size: 24px;
+}
+.container span {
+  font-size:20px;
+}
