--- a/AppTV/css/menu.css
+++ b/AppTV/css/menu.css
@@ -1,22 +1,46 @@
-.wrap
-{
-  background: #FFFFFF;
-  border-radius: 5px;
-  height: 180px ;
-  width: 180px;
-  margin: 20px 0 0 20px;
-  border: 1px solid rgba(0, 0, 0, 0.15);
+:root {
+  --notif-height: 68px;
+}
+body {
+  margin: 0;
+  background-color: #fff;
+}
+.menu-main {
   position: relative;
+  background-color: #fff;
+  height: 100%;
 }
-.wrap:hover
-{
+.wrap {
+  background: #ffffff;
+  border-radius: 5px;
+  height: 244px;
+  width: 244px;
+  margin: 20px 0 0 20px;
+  border: 3px solid rgba(0, 0, 0, 0.15);
+  position: relative;
+  text-decoration: none;
+  color: #000;
+}
+
+.wrap:hover {
   border: 3px solid red;
-  height: 174px ;
-  width: 174px;
 }
-.lblTitle{
-    width: 100%;
-    text-align: center;
+.wrap img {
+  width: 172px;
+  height: 172px;
+  margin: 20px 0 0 40px;
+  user-select: none;
+}
+.wrap .lblTitle {
+  position: absolute;
+  bottom: 0;
+}
+.wrap.active {
+  border: 3px solid red;
+}
+.lblTitle {
+  width: 100%;
+  text-align: center;
 }
 
 .carousel-container {
@@ -31,8 +55,7 @@
 }
 .carousel-container .track {
   display: inline-flex;
-  transition: 0.5s ;
-  /* transition:2s ease-in-out left; */
+  transition: transform 0.6s ease-out;
 }
 
 .nav button {
@@ -44,7 +67,7 @@
   top: 50%;
   transform: translateY(-50%);
   cursor: pointer;
-  background:rgba(179, 176, 176, 0.5);
+  background: rgba(179, 176, 176, 0.5);
 }
 .nav .prev {
   left: 5px;
@@ -62,7 +85,7 @@
 
 /* phan slide */
 
-.wrapp{
+.wrapp {
   width: 1260px;
   height: 355px;
   margin: 50px auto;
@@ -75,25 +98,25 @@
   height: 355px;
 }
 
-.slidee { 
+.slidee {
   width: 1260px;
   height: 355px;
   position: absolute;
   opacity: 0;
 }
 .nut {
-  position: absolute;  
+  position: absolute;
   left: 560px;
   top: 300px;
 }
 .nut ul li {
   width: 15px;
   height: 15px;
-  border:2px solid rgba(0, 0, 0, 0.15);
+  border: 2px solid rgba(0, 0, 0, 0.15);
   display: inline-block;
   border-radius: 100%;
   cursor: pointer;
-  margin-left: 5px ;
+  margin-left: 5px;
 }
 
 .nut ul li:hover {
@@ -102,26 +125,28 @@
   width: 19px;
   height: 19px;
 }
-.ra{
+.ra {
   transition: 1.5s;
   opacity: 1;
 }
 /* div*/
-.div1{
+.div1 {
   margin: 50px auto;
   position: relative;
   width: 1260px;
   font-size: 30px;
 }
-.div2{
-  margin: 50px auto;
-  position: relative;
-  width: 100%;
-  height: 40px;
+.div2 {
+  margin-bottom: 16px;
+  height: var(--notif-height);
   font-size: 20px;
   font-weight: 500;
   text-align: center;
-  background-color: #FA8072;
+  background-color: #fa8072;
   color: white;
-  padding-top: 15px;
+}
+.div2 p {
+  margin: 0;
+  text-align: center;
+  line-height: 68px;
 }
