--- a/AppTV/css/watchtivi.css
+++ b/AppTV/css/watchtivi.css
@@ -1,47 +1,141 @@
-#myInput {
-  background-position: 96% 10px; 
-  background-repeat: no-repeat; 
-  width: 340px;
-  height: 40px;
-  font-size: 14px; 
-  margin: 20px 0 0 680px;
-  padding: 0 40px 0 20px;
-  border: 1px solid #ddd; 
-  border-radius: 40px;
+/* .container .chanel-list {
+} */
+:root {
+  --nav-bar-height: 80px;
 }
-#myInput:focus{
-  outline: none;
-}
-.div2{
+.div2 {
   margin: 0 auto;
   width: 100%;
-  height: 80px;
+  height: var(--nav-bar-height);
   font-size: 20px;
   font-weight: 500;
   display: flex;
   box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.15);
+  background-color: #fff;
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  z-index: 1;
+}
+.div2 .btn-back {
+  position: absolute;
+  cursor: pointer;
+  left: 160px;
+  top: 50%;
+  transform: translateY(-50%);
+}
+.div2 .title-page {
+  font-size: 24px;
+  font-weight: 600;
+  position: absolute;
+  left: 211px;
+  top: 50%;
+  transform: translateY(-50%);
+}
+.div2 .search-control {
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+  right: 128px;
+  background-position: 96% 10px;
+  background-repeat: no-repeat;
+  width: 340px;
+  height: 40px;
+  font-size: 14px;
+  padding: 0 40px 0 20px;
+  border: 1px solid #ddd;
+  border-radius: 40px;
+}
+.div2 .search-control:focus {
+  outline: none;
+}
+.wrap {
+  background-color: #fff;
+  border-radius: 5px;
+  width: 308px;
+  margin: 20px 0 0 20px;
+  box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.15);
+  position: relative;
 }
 
-.wrap
-{
-background: #FFFFFF;
-border-radius: 5px;
-height: 310px ;
-width: 250px;
-margin: 20px 0 0 20px;
-border: 1px solid rgba(0, 0, 0, 0.15);
-box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.15);
-position: relative;
+#carousel-chanel-container {
+  min-width: 1200px;
+  left: 128px;
+  right: 128px;
+  position: absolute;
+  top: var(--nav-bar-height);
 }
-.wrap:hover
-{
+#chanel-list-slider {
+  display: inline-flex;
+  position: relative;
+  margin-top: 60px;
+  transition: transform 0.6s ease-out;
+  margin: 8px -15px 0 0px;
+}
+#chanel-list-slider .img-wrap {
+  width: 100%;
+  border: 2px solid rgba(0, 0, 0, 0.15);
+}
+#chanel-list-slider .img-wrap:hover {
+  border-color: red;
+}
 
-border: 2px solid red;
-height: 308px ;
-width: 248px;
+#chanel-list-slider .chanel-name {
+  padding: 12px;
 }
-.stylep{
-width: 100%;
-text-align: center;
-margin:5px 0 0 0
+#chanel-list-slider .chanel-item {
+  margin: 50px 10px 0 10px;
+}
+#carousel-chanel-container .chanel-name {
+  font-size: 32px;
+  color: #000;
+}
+.stylep {
+  width: 100%;
+  text-align: left;
+  padding: 12px;
+  line-height: 38px;
+  margin: 0;
+}
+
+#carousel-chanel-container .carousel-inner {
+  overflow: hidden;
+}
+#carousel-chanel-container .btn-prev {
+  position: absolute;
+  left: 5px;
+}
+/* btn control slider */
+#carousel-chanel-container .nav-group {
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+  left: 0;
+  right: 0;
+}
+#carousel-chanel-container .btn {
+  position: absolute;
+  width: 60px;
+  height: 60px;
+  border-radius: 50%;
+  border: 1px solid #aaa;
+  cursor: pointer;
+  background: rgba(179, 176, 176, 0.5);
+}
+#carousel-chanel-container .prev {
+  left: 5px;
+  display: none;
+}
+#carousel-chanel-container .prev.show {
+  display: block;
+}
+#carousel-chanel-container .next {
+  right: 5px;
+}
+#carousel-chanel-container .next.hide {
+  display: none;
+}
+
+@media (min-width: 1201px) {
 }
