--- a/AppTV/css/medicalschedule.css
+++ b/AppTV/css/medicalschedule.css
@@ -6,6 +6,7 @@
     font-weight: 500;
     display: flex;
     box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.15);
+    cursor: pointer;
   }
   .table {
   width: 100%;
