--- a/AppTV/css/watchfilm.css
+++ b/AppTV/css/watchfilm.css
@@ -1,18 +1,18 @@
 #myInput {
-  background-position: 96% 10px; 
-  background-repeat: no-repeat; 
+  background-position: 96% 10px;
+  background-repeat: no-repeat;
   width: 340px;
   height: 40px;
-  font-size: 14px; 
+  font-size: 14px;
   margin: 20px 0 0 680px;
   padding: 0 40px 0 20px;
-  border: 1px solid #ddd; 
+  border: 1px solid #ddd;
   border-radius: 40px;
 }
-#myInput:focus{
+#myInput:focus {
   outline: none;
 }
-.div2{
+.div2 {
   margin: 0 auto;
   width: 100%;
   height: 80px;
@@ -21,34 +21,47 @@
   display: flex;
   box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.15);
 }
-
-.wrap
-{
-background: #FFFFFF;
-border-radius: 5px;
-height: 400px ;
-width: 250px;
-margin: 20px 0 0 20px;
-border: 1px solid rgba(0, 0, 0, 0.15);
-box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.15);
-position: relative;
+.film-group {
+  display: flex;
 }
-.wrap:hover
-{
-  background-image: url('assets/selectfilm.svg');
+.wrap {
+  background: #ffffff;
+  border-radius: 5px;
+  height: 400px;
+  width: 250px;
+  margin: 20px 0 0 20px;
+  border: 1px solid rgba(0, 0, 0, 0.15);
+  box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.15);
+  position: relative;
+  border: 2px solid #ffffff;
+}
+.wrap:hover {
+  background-image: url("assets/selectfilm.svg");
   background-repeat: no-repeat;
-  background-position: 50% 50%; 
+  background-position: 50% 50%;
   border: 2px solid red;
-  height: 398px ;
+  height: 398px;
   width: 248px;
 }
-.wrap:hover img,
-    .wrap.hover img {
-        opacity: 0.4;
-    }
+.wrap.film-item.active {
+  background-image: url("../assets/play.svg");
+  background-repeat: no-repeat;
+  background-position: 50% 50%;
+  border: 2px solid red;
+  height: 398px;
+  width: 248px;
+}
+.wrap.film-item.active > img,
+.wrap:hover > img {
+  opacity: 0.4;
+}
+.wrap.film-item.active,
+.wrap:hover {
+  background-image: url("../assets/play.svg");
+}
 
-.stylep{
-width: 100%;
-text-align: center;
-margin:5px 0 0 0
+.stylep {
+  width: 100%;
+  text-align: center;
+  margin: 5px 0 0 0;
 }
