--- a/AppTV/css/style.css
+++ b/AppTV/css/style.css
@@ -33,12 +33,12 @@ body {
   height: 220px;
   width: 220px;
   margin: 20px 0 0 20px;
-  border: 1px solid rgba(0, 0, 0, 0.15);
+  /* border: 1px solid rgba(0, 0, 0, 0.15); */
   position: relative;
 }
-.wrap:hover {
+/* .wrap:hover {
   border: 1px solid red;
-}
+} */
 .wrap .lbl {
   position: absolute;
   top: 10%;
@@ -53,6 +53,7 @@ body {
   width: 50px;
   height: 20px;
   border-radius: 30px 0px 0px 30px;
+  line-height: 10px;
 }
 .insertBtn .lbl {
   position: absolute;
@@ -74,6 +75,7 @@ body {
   height: 70px;
   font-weight: 600;
 }
+.insertBtn2.active,
 .insertBtn2:hover {
   background-color: white;
   color: red;
@@ -183,3 +185,6 @@ body {
   color: white;
   border: none;
 }
+
+
+
