--- a/AppTV/css/style.css
+++ b/AppTV/css/style.css
@@ -23,6 +23,7 @@ body {
   background-color: red;
   color: white;
 }
+.insertBtn.currentTab,
 .insertBtn.active {
   background-color: red;
   color: white;
